Atualização em portfolio.html e estilos.css

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -13,6 +13,11 @@ h2 {
     font-size: 18px;
 }
 
+a {
+    color: rgb(31, 86, 206);
+    text-decoration: none;
+}
+
 main {
     background-color: white;
     width: 75%;
